--- a/spa.html
+++ b/spa.html
@@ -2,17 +2,24 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>SPA Starter</title>
+
   <!-- スタイルシート -->
   <link rel="stylesheet" href="css/spa.css" type="text/css" />
   <link rel="stylesheet" href="css/spa.shell.css" type="text/css" />
+  <link rel="stylesheet" href="css/spa.chat.css" type="text/css" />
   <!-- サードパーティjavascript -->
   <script src="js/jq/jquery-1.11.3.js"></script>
   <script src="js/jq/jquery.uriAnchor.js"></script>
   <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
   <!-- spa javascript -->
   <script src="js/spa.js"></script>	
+  <script src="js/spa.util.js"></script>	
+  <script src="js/spa.model.js"></script>	
   <script src="js/spa.shell.js"></script>	
+  <script src="js/spa.chat.js"></script>	
   <script>$(function (){spa.initModule($('#spa'));});</script>				
 </head>
 <body>
